--- a/style.css
+++ b/style.css
@@ -3,3 +3,7 @@
 .disponible {color: green; font-weight: bold;}
 .indication {color:#ff0000; font-style: italic;}
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon 
+{filter: invert(1);}
+					
